Fixing the spacing on the side bar navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,8 @@ body a:hover, body a:focus {
 .sidebar { display:block; padding-top: 10%; background-color: #343535; color:#fff; height: 100%;}
 .sidebar a, .sidebar a:focus { color: #fff; }
 .sidebar a:hover { color: #f64929; }
-nav {font-size: 1.5em; margin-bottom: 20px;}
+nav {font-size: 1.5em;}
+.nav {margin-bottom: 20px;}
 
 .sidebar-header {text-align: center; margin-bottom: 20px;}
 .sidebar-header .title {letter-spacing: 3px; text-transform: uppercase;}
